# pat-auth-fastapi-demo

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 00a3b809aaac_create_users_table.py  078d72b4bec9_change_token_prefix_to_8_chars.py  14783fd3f203_convert_scopes_from_json_to_many_to_many.py  2026020500001_add_upload_fields_to_background_tasks.py  20260213130000_convert_task_type_to_enum.py  20260213140000_convert_status_to_enum.py  20260214140000_remove_finalizing_from_taskstatus.py  490426bdfc05_add_background_tasks_and_fcs_statistics_.py  58cce66cb274_replace_username_with_email_in_users_.py  599510ba07cc_merge_scopes_and_upload_fields_.py  9f4118467795_create_pat_audit_logs_table.py  dd003cdc5388_create_scopes_and_personal_access_.py  e5f8a3c2d1b0_create_fcs_files_table.py
app/: config.py  database.py  logging_config.py  main.py  rate_limiter.py
app/dependencies/: auth.py  pat.py  storage.py  token.py
app/middleware/: audit.py  rate_limit.py
app/models/: __init__.py  audit_log.py  background_task.py  fcs_file.py  fcs_statistics.py  pat.py  pat_scopes.py  scope.py  user.py
app/schemas/: audit_log.py  auth.py  common.py  fcs.py  pat.py  users.py  workspaces.py
app/services/: auth.py  background_tasks.py  chunked_upload.py  cleanup.py  fcs.py  fcs_statistics.py  jwt.py  pat.py
app/storage/: __init__.py  base.py  local.py  (+1 more)
tests/: conftest.py  constants.py
(+28 files in other folders)
